data/derived/comb/progs/unify/prog8746.ml.out
Characters 29-40:
  let fixpoint (f,b) = wwhile ((f b, true), b);;
                               ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
